add swagger notation and makefile
